# GhostDumper

./: .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  Makefile  README.md  install.sh  pyproject.toml  server.py  setup.py
GhostDumper/: install.sh  pyproject.toml
GhostDumper/examples/: example_usage.py
GhostDumper/ghostdumper/: __init__.py  cli.py
GhostDumper/ghostdumper/generators/: web_report.py
GhostDumper/ghostdumper/parsers/: binary_loader.py  metadata_parser.py  type_resolver.py
GhostDumper/ghostdumper/plugins/builtin/: unity2021.py
GhostDumper/ghostdumper/scripts/: batch_analyze.py
GhostDumper/ghostdumper/utils/: logger.py
GhostDumper/tests/: test_deobfuscator.py
docs/: API.md  ARCHITECTURE.md  COMPARISON.md
ghostdumper/: __init__.py  cli.py
ghostdumper/agents/: semantic_agent.py
ghostdumper/core/: config.py  engine.py
ghostdumper/generators/: cpp_generator.py  cs_generator.py  ghidra_generator.py  hook_generator.py  ida_generator.py  json_generator.py  r2_generator.py  web_report.py
ghostdumper/parsers/: binary_loader.py  deobfuscator.py  metadata_parser.py  type_resolver.py
ghostdumper/plugins/: plugin_manager.py
ghostdumper/plugins/builtin/: beebyte.py  mihoyo.py
ghostdumper/scripts/: batch_analyze.py  termux_setup.py
ghostdumper/utils/: version_detector.py
ghostdumper/web/: server.py
ghostdumper/web/static/: app.js  style.css
ghostdumper/web/templates/: index.html
tests/: test_binary_loader.py  test_metadata_parser.py
